about me accordion width and alignment fixed in mobile view

--- a/src/components/accordion/Accordion.scss
+++ b/src/components/accordion/Accordion.scss
@@ -5,7 +5,7 @@
 		margin: 2% 0% 2% 0%;
 	}
 	@media(max-width: 500px) {
-		margin: 10% 15% 0% 15%;
+		margin: 10% 0% 0% 0%;
 	}
 }
 
@@ -29,8 +29,8 @@
 	padding-left: 1%;
 	padding-bottom: 1%;
 	margin-left: 35%;
-	@media(max-width: 500px) {
-		padding: 5%;
+	@media(max-width: 600px) {
+		padding: 5% 5% 5% 15%;
 	}
 }
 
@@ -38,10 +38,16 @@
 .accordion__icon {
 	margin: 0% 0% .5% 7%;
 	@media(max-width: 2400px) {
-		margin: .75% 0% 0% 7%;
+		margin: .8% 0% 0% 7%;
 	}
-	@media(max-width: 500px) {
-		margin: .8% 0% 0% 4%;
+	@media(max-width: 1440px) {
+		margin: 1% 0% 0% 7%;
+	}
+	@media(max-width: 700px) {
+		margin: 0% 0% 0% 4%;
+	}
+	@media(max-width: 700px) {
+		margin: 1.5% 0% 0% 4%;
 	}
 	transition: transform 0.6s ease;
 }
